--- a/store/templates/store/product_detail.html
+++ b/store/templates/store/product_detail.html
@@ -1,29 +1,10 @@
+{% extends "base.html" %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Product Detail Page for a Multi-Vendor Ecommerce Website">
-    <meta name="author" content="Your Name">
-    <title>Product Detail | Multi-Vendor Ecommerce</title>
-    {% block "styles" %}<link rel="stylesheet" href="{%static "store/product_detail.css" %}">{% endblock %}
-</head>
-<body>
-    <header>
-        <nav>
-            <!-- Navigation Bar (You can add links to other pages like Home, Cart, Profile, etc.) -->
-            <div class="logo">E-Commerce</div>
-            <div class="menu">
-                <a href="#">Home</a>
-                <a href="#">Shop</a>
-                <a href="#">Cart</a>
-                <a href="#">Profile</a>
-            </div>
-        </nav>
-    </header>
 
+{% block styles %} <link rel="stylesheet" href="{%static "store/product_detail.css" %}"> {% endblock %}
+
+{% block contents %}
     <main class="product-detail-page">
         <!-- Product Info Section -->
         <section class="product-info">
@@ -105,10 +86,6 @@
         </section>
     </main>
 
-    <footer>
-        <p>&copy; 2024 E-Commerce Company. All Rights Reserved.</p>
-    </footer>
-
     <script src="{% static "store/product_detail.js" %}"></script>
-</body>
-</html>
+
+    {% endblock contents %}
