--- a/account/static/account/login.css
+++ b/account/static/account/login.css
@@ -1,7 +1,7 @@
 
 
 #login-area{
-    padding: 1rem;
+    padding: 2rem;
     width:30%;
     border-radius: 4px;
     margin: 2rem auto;
@@ -13,7 +13,13 @@
     text-align: center;
 }
 
-#login-area ul{
+#login-area  .form-control ul{
+    list-style: none;
+    display: inline-block;
+    padding: 0;
+}
+
+#login-area .nf-error ul{
     list-style: none;
     color: rgb(252, 129, 129);
     display: inline-block;
@@ -32,13 +38,38 @@
 
 .form-control input{
     width: 100%;
-    height: 20px;
+    height: 2rem;
+    font-size: 1rem;
 }
 
-.form-control button{
-    margin: auto auto;
+#button{
+    text-align: center;
+}
+
+#login-area button{
+    padding: .5rem;
+    border-radius: 4px;
+    border: none;
+    background-color: #575757;
+    color: white;
+    font-size: 1rem;
+    cursor: pointer;
 }
 
 #other{
     text-align: center;
+}
+
+#other a{
+    text-decoration: none;
+    color: #575757;
+    padding: .5rem;
+    border-radius: 4px;
+}
+
+#other a:hover,
+#other a:active{
+    background-color: #575757;
+    color: white;
+    cursor: pointer;
 }
