--- a/account/templates/account/register.html
+++ b/account/templates/account/register.html
@@ -1,13 +1,12 @@
 {% extends "base.html" %}
 {% load static %}
-{% load crispy_forms_tags %}
 
 {% block styles %} <link rel="stylesheet" href="{% static "account/login.css" %}"> {% endblock styles %}
 
 {% block contents %}
 <div id="login-area">
     <h3> Create a account today</h3>
-    
+    <br>
     <hr>
     <br>
 
@@ -22,13 +21,17 @@
         </div>
         {% endfor %}
         <br>
+        <div id="button">
         <button type="submit">Register</button>
+        </div>
     </form>
-
+    <br>
+    <hr>
     <br>
 
     <div id="other">
         <p>Already have an account</p>
+        <br>
         <a  href="{% url 'login' %}">Login </a>
 
     </div>
