--- a/store/templates/store/homepage.html
+++ b/store/templates/store/homepage.html
@@ -49,10 +49,11 @@
                 {% for product in products  %}
                 <div class="carousel-container">
                     <div class="carousel-item">
-                        <img src="{{product.image.all.0.image.url}}" alt="testing">
-                        
-                        <h3>Product 1</h3>
-                        <p>$99.99</p>
+                        <a href="{% url "product_detail" product.slug %}"> 
+                            <img src="{{product.image.all.0.image.url}}" alt="testing">
+                            <h3>Product 1</h3>
+                            <p>₦{{product.price|floatformat:"2g"}}</p>
+                        </a>
                     </div>
                     <div class="carousel-item">
                         <img src="product2.jpg" alt="Product 2">
@@ -107,4 +108,6 @@
             </div>
         </div>
     </section>
+
+    <script src="{% static "store/homepage.js" %}"></script>
 {% endblock contents %}
