--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load menu %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -23,6 +24,7 @@
             <li><a href="#">Sports</a></li>
             <li><a href="#">Books</a></li>
         </ul>
+        {% menu_items %}
     </div>
 
     <!-- Header Section -->
