--- a/dashboard/templates/dashboard/account.html
+++ b/dashboard/templates/dashboard/account.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block title %}Dashboard | Better Life{% endblock title %}
+
 {% block styles %} <link rel="stylesheet" href="{% static "dashboard/account.css" %}"> {% endblock styles %}
 
 {% block contents %}
