--- a/dashboard/templates/dashboard/account.html
+++ b/dashboard/templates/dashboard/account.html
@@ -23,7 +23,7 @@
             <td>My Order</td>
         </tr>
         <tr>
-            <td>My Address</td>
+            <td><a href="{% url "my_address" %}">My Address</a></td>
             <td>My Saved Items</td>
         </tr>
     </table>
