--- a/dashboard/templates/dashboard/account.html
+++ b/dashboard/templates/dashboard/account.html
@@ -37,49 +37,7 @@
 </div>
 {% endif %}
 
-<div class="recently-viewed">
-    <h2>Recently Viewed</h2>
-    <div class="carousel">
-        <button class="prev-btn">❮</button>
-        <div class="carousel-container">
-            <div class="carousel-item">
-                <a href=""> 
-                    <img src="{{product.image.all.0.image.url}}" alt="testing">
-                    <h3>Product 1</h3>
-                    <p>₦{{product.price|floatformat:"2g"}}</p>
-                </a>
-            </div>
-            <div class="carousel-item">
-                <img src="product2.jpg" alt="Product 2">
-                <h3>Product 2</h3>
-                <p>$129.99</p>
-            </div>
-            <div class="carousel-item">
-                <img src="product3.jpg" alt="Product 3">
-                <h3>Product 3</h3>
-                <p>$149.99</p>
-            </div>
-            <div class="carousel-item">
-                <img src="product3.jpg" alt="Product 3">
-                <h3>Product 3</h3>
-                <p>$149.99</p>
-            </div>
-            <div class="carousel-item">
-                <img src="product3.jpg" alt="Product 3">
-                <h3>Product 3</h3>
-                <p>$149.99</p>
-            </div>
-            <div class="carousel-item">
-                <img src="product3.jpg" alt="Product 3">
-                <h3>Product 3</h3>
-                <p>$149.99</p>
-            </div>
-            <!-- More items here -->
-             
-        </div>
-        <button class="next-btn">❯</button>
-    </div>
-</div>
+{% include "store/includes/recently_viewed.html" %}
 
 <script src="{% static "dashboard/account.js" %}"></script>
 {% endblock contents %}
