--- a/store/static/store/css/product_detail.css
+++ b/store/static/store/css/product_detail.css
@@ -196,9 +196,67 @@
     background-color: #2980b9;
 }
 
-footer {
+
+
+
+.recently-viewed {
+    padding: 40px 0;
+    background-color: #f9f9f9;
+}
+
+.recently-viewed h2 {
     text-align: center;
-    padding: 20px;
-    background-color: #333;
-    color: #fff;
+    margin-bottom: 20px;
+}
+
+.recently-viewed .carousel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
+}
+
+.recently-viewed .carousel-container {
+    display: flex;
+    gap: 20px; /* Adjust the gap between products */
+    transition: transform 0.3s ease; /* Smooth transition when moving */
+    overflow-x: auto; /* Enable horizontal scrolling */
+    width: 80%;
+    scroll-behavior: smooth; /* Smooth scrolling effect */
+}
+
+/* Hide scrolbar for chrome, safari and opera */
+.recently-viewed .carousel-container::-webkit-scrollbar{
+    display: none;
+}
+
+/* Hide scrolbar for IE, Edge and Firefox */
+.recently-viewed .carousel-container{
+    -ms-overflow-style: none; /* IE and Edge*/
+    scrollbar-width: none; /* Firefox */
+}
+
+
+.recently-viewed .carousel-item {
+    width: 15%;
+    text-align: center;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.recently-viewed .carousel-item a{
+    text-decoration: none;
+    color: #000;
+}
+
+.recently-viewed .carousel-item h3,
+.recently-viewed .carousel-item p{
+    font-size: 15px;
+}
+
+.recently-viewed .carousel-item img {
+    width: 100%;
+    border-radius: 8px;
 }
