--- a/store/templates/store/homepage.html
+++ b/store/templates/store/homepage.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block styles %} <link rel="stylesheet" href="{% static "store/homepage.css" %}"> {% endblock styles %}
+{% block styles %} <link rel="stylesheet" href="{% static "store/css/homepage.css" %}"> {% endblock styles %}
 
 {% block contents %}
     <!-- Hero Section -->
@@ -20,22 +20,16 @@
         <div class="container">
             <h2>Shop by Categories</h2>
             <div class="category-list">
+
+                {% for category in categories %}
                 <div class="category-item">
-                    <img src="category1.jpg" alt="Category 1">
-                    <h3>Electronics</h3>
+                    <a href="{% url "list_category" category.category %}">
+                        <img src="category1.jpg" alt="Category 1">
+                        <h3>{{category.category}}</h3>
+                    </a>
                 </div>
-                <div class="category-item">
-                    <img src="category2.jpg" alt="Category 2">
-                    <h3>Fashion</h3>
-                </div>
-                <div class="category-item">
-                    <img src="category3.jpg" alt="Category 3">
-                    <h3>Home & Kitchen</h3>
-                </div>
-                <div class="category-item">
-                    <img src="category4.jpg" alt="Category 4">
-                    <h3>Beauty</h3>
-                </div>
+                {% endfor %}
+                
             </div>
         </div>
     </section>
@@ -52,42 +46,20 @@
                     <div class="carousel-item">
                         <a href="{% url "product_detail" product.slug %}"> 
                             <img src="{{product.image.all.0.image.url}}" alt="testing">
-                            <h3>Product 1</h3>
+                            <h3>{{product.name}}</h3>
                             <p>₦{{product.price|floatformat:"2g"}}</p>
                         </a>
                     </div>
-                    <div class="carousel-item">
-                        <img src="product2.jpg" alt="Product 2">
-                        <h3>Product 2</h3>
-                        <p>$129.99</p>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="product3.jpg" alt="Product 3">
-                        <h3>Product 3</h3>
-                        <p>$149.99</p>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="product3.jpg" alt="Product 3">
-                        <h3>Product 3</h3>
-                        <p>$149.99</p>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="product3.jpg" alt="Product 3">
-                        <h3>Product 3</h3>
-                        <p>$149.99</p>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="product3.jpg" alt="Product 3">
-                        <h3>Product 3</h3>
-                        <p>$149.99</p>
-                    </div>
-                    <!-- More items here -->
+                    
                      {% endfor %}
                 </div>
                 <button class="next-btn">❯</button>
             </div>
         </div>
     </section>
+
+
+    {% include "store/includes/recently_viewed.html" %}
 
     <!-- Vendors Section -->
     <section class="vendors">
@@ -110,5 +82,5 @@
         </div>
     </section>
 
-    <script src="{% static "store/homepage.js" %}"></script>
+    <script src="{% static "store/js/homepage.js" %}"></script>
 {% endblock contents %}
