--- a/templates/menu_items.html
+++ b/templates/menu_items.html
@@ -1,6 +1,6 @@
 
 <ul class="category-list">
     {% for category in categories %}
-    <li><a href="#">{{category.category}}</a></li>
+    <li><a href="{% url "list_category" category.category %}">{{category.category}}</a></li>
     {% endfor %}
 </ul>
