--- a/dashboard/templates/dashboard/my_address.html
+++ b/dashboard/templates/dashboard/my_address.html
@@ -21,6 +21,7 @@
             <br>
             <hr>
             <div class="address-details">
+                <p><strong>Name:</strong> {{address.last_name}} {{address.first_name}}
                 <p><strong>Location:</strong> {{address.city}}, {{address.state}}, {{address.country}}</p>
                 <p><strong>Phone Number:</strong> {{address.phone_number}}</p>
             </div>
