--- a/store/templates/store/homepage.html
+++ b/store/templates/store/homepage.html
@@ -49,6 +49,10 @@
                             <h3>{{product.name}}</h3>
                             <p>₦{{product.price|floatformat:"2g"}}</p>
                         </a>
+                        <div class="add-save">
+                            <a href="" class="save">Save product</a>
+                            <a href="{% url "add_to_cart" product.id %}" class="add">Add to cart</a>
+                        </div>
                     </div>
                     
                      {% endfor %}
