--- a/store/templates/store/includes/recently_viewed.html
+++ b/store/templates/store/includes/recently_viewed.html
@@ -1,5 +1,6 @@
 
     <div class="recently-viewed">
+        {% if recently_viewed %}
         <h2>Recently Viewed</h2>
         <div class="carousel">
             <div class="carousel-container" >
@@ -18,6 +19,7 @@
                  
             </div>
         </div>
+        {% endif %}
     </div>
     
     
